--- a/ReportsProj/Views/Home/CSR_All.cshtml
+++ b/ReportsProj/Views/Home/CSR_All.cshtml
@@ -9,7 +9,7 @@
     ReportsProj.Reports.CSR.Rep_CRS_All MyReport = new ReportsProj.Reports.CSR.Rep_CRS_All();
 
     // Add DataSource
-    MyReport.DataSource = TempData["MyDatasource"];
+    //MyReport.DataSource = TempData["MyDatasource"];
 
     // Specify the report properties
     MyReport.Parameters["UserName"].Value = TempData["P_UserName"];
