--- a/ReportsProj/Views/Shared/_Layout.cshtml
+++ b/ReportsProj/Views/Shared/_Layout.cshtml
@@ -25,13 +25,6 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                @*<div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ManagementDef" asp-action="Index">Management</a>
-                        </li>
-                    </ul>
-                </div>*@
             </div>
         </nav>
     </header>
@@ -46,9 +39,17 @@
             &copy; 2020 - AjaSoft ReportsProj
         </div>
     </footer>
+    @*old*@
     @*<script src="~/lib/jquery/dist/jquery.min.js"></script>*@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    @*<script src="~/js/site.js" asp-append-version="true"></script>*@
     @*@RenderSection("Scripts", required: false)*@
+
+
+    @*new*@
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    @*<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
+    @RenderSection("Scripts", required: false)
+
 </body>
 </html>
