--- a/ReportsProj/Views/ManagementDoc/AttendancePlane_Port_En.cshtml
+++ b/ReportsProj/Views/ManagementDoc/AttendancePlane_Port_En.cshtml
@@ -1,26 +1,69 @@
-﻿<link rel="stylesheet" href="~/css/viewer.part.bundle.css" />
+﻿
+<link rel="stylesheet" href="~/css/viewer.part.bundle.css" />
 <link rel="stylesheet" href="~/css/designer.part.bundle.css" />
 <script src="~/js/viewer.part.bundle.js"></script>
 <script src="~/js/designer.part.bundle.js"></script>
+
+@using ReportsProj.Management_Models
+@using ReportsProj.DBC
+@inject Management_DBC _Context
 
 @{
     //Declare Report
     ReportsProj.Reports.ManagementDoc.Rep_AttendancePlan_port_En MyReport = new ReportsProj.Reports.ManagementDoc.Rep_AttendancePlan_port_En();
 
+    //----- Get Same DataSource Of Grid Form  ----------------
+    List<DailyActivities_AttendancePlanPerEmployee2> MyAll_Ids = _Context.DailyActivities_AttendancePlanPerEmployee2.Where(c => ("," + TempData["P_Id"] + ",").ToString().Contains("," + c.Id.ToString() + ",")).ToList<DailyActivities_AttendancePlanPerEmployee2>();
+    List<DailyActivities_AttendancePlanPerEmployee2> MyDataSource = new List<DailyActivities_AttendancePlanPerEmployee2>();
+    string[] MyChecker_Ids = TempData["P_Id"].ToString().Split(",");
+    for (int counter = 0; counter < MyChecker_Ids.Count(); counter++)
+    {
+        foreach (DailyActivities_AttendancePlanPerEmployee2 item in MyAll_Ids)
+        {
+            if (item.Id.ToString() == MyChecker_Ids[counter])
+            {
+                MyDataSource.Add(item);
+                MyAll_Ids.Remove(item);
+                break;
+            }
+        }
+    }
 
     // Specify the report properties
-    MyReport.FilterString = "[Id] In (" + TempData["P_Id"] + ")";
+    MyReport.DataSource = MyDataSource;
     MyReport.Parameters["P_UserName"].Value = TempData["P_User"];
-
-    MyReport.RequestParameters = false;
-
-    // Go To Print
-    @Html.DevExpress().WebDocumentViewer("DocumentViewer").Height("1000px").Bind(MyReport)
-
-    //--Invisible Parameters Block
     MyReport.RequestParameters = false;
 
     // Go To Print
     @Html.DevExpress().WebDocumentViewer("DocumentViewer").Height("1000px").Bind(MyReport)
 
 }
+
+
+
+@*<link rel="stylesheet" href="~/css/viewer.part.bundle.css" />
+    <link rel="stylesheet" href="~/css/designer.part.bundle.css" />
+    <script src="~/js/viewer.part.bundle.js"></script>
+    <script src="~/js/designer.part.bundle.js"></script>
+
+    @{
+        //Declare Report
+        ReportsProj.Reports.ManagementDoc.Rep_AttendancePlan_port_En MyReport = new ReportsProj.Reports.ManagementDoc.Rep_AttendancePlan_port_En();
+
+
+        // Specify the report properties
+        MyReport.FilterString = "[Id] In (" + TempData["P_Id"] + ")";
+        MyReport.Parameters["P_UserName"].Value = TempData["P_User"];
+
+        MyReport.RequestParameters = false;
+
+        // Go To Print
+        @Html.DevExpress().WebDocumentViewer("DocumentViewer").Height("1000px").Bind(MyReport)
+
+        //--Invisible Parameters Block
+        MyReport.RequestParameters = false;
+
+        // Go To Print
+        @Html.DevExpress().WebDocumentViewer("DocumentViewer").Height("1000px").Bind(MyReport)
+
+    }*@
