--- a/ReportsProj/Views/ManagementDoc/FingerPrint_Filterd.cshtml
+++ b/ReportsProj/Views/ManagementDoc/FingerPrint_Filterd.cshtml
@@ -1,4 +1,48 @@
-﻿<link rel="stylesheet" href="~/css/viewer.part.bundle.css" />
+﻿
+<link rel="stylesheet" href="~/css/viewer.part.bundle.css" />
+<link rel="stylesheet" href="~/css/designer.part.bundle.css" />
+<script src="~/js/viewer.part.bundle.js"></script>
+<script src="~/js/designer.part.bundle.js"></script>
+
+@using ReportsProj.Management_Models
+@using ReportsProj.DBC
+@inject Management_DBC _Context 
+
+@{
+    //Declare Report
+    ReportsProj.Reports.ManagementDoc.Rep_FingerPrint MyReport = new ReportsProj.Reports.ManagementDoc.Rep_FingerPrint();
+
+    //----- Get Same DataSource Of Grid Form  ----------------
+    List<DailyActivities_FingerPrintLog> MyAll_Ids = _Context.DailyActivities_FingerPrintLog.Where(c => ("," + TempData["P_Id"] + ",").ToString().Contains("," + c.Id.ToString() + ",")).ToList<DailyActivities_FingerPrintLog>();
+    List<DailyActivities_FingerPrintLog> MyDataSource = new List<DailyActivities_FingerPrintLog>();
+    string[] MyChecker_Ids = TempData["P_Id"].ToString().Split(",");
+    for (int counter = 0; counter < MyChecker_Ids.Count(); counter++)
+    {
+        foreach (DailyActivities_FingerPrintLog item in MyAll_Ids)
+        {
+            if (item.Id.ToString() == MyChecker_Ids[counter])
+            {
+                MyDataSource.Add(item);
+                MyAll_Ids.Remove(item);
+                break;
+            }
+        }
+    }
+
+    // Specify the report properties
+    MyReport.DataSource = MyDataSource;
+    MyReport.Parameters["P_RepHeader"].Value = TempData["P_T_Header"];
+    MyReport.Parameters["P_UserName"].Value = TempData["P_User"];
+    MyReport.RequestParameters = false;
+
+    // Go To Print
+    @Html.DevExpress().WebDocumentViewer("DocumentViewer").Height("1000px").Bind(MyReport)
+
+}
+
+
+
+@*<link rel="stylesheet" href="~/css/viewer.part.bundle.css" />
 <link rel="stylesheet" href="~/css/designer.part.bundle.css" />
 <script src="~/js/viewer.part.bundle.js"></script>
 <script src="~/js/designer.part.bundle.js"></script>
@@ -22,6 +66,6 @@
     MyReport.RequestParameters = false;
 
     // Go To Print
-    @Html.DevExpress().WebDocumentViewer("DocumentViewer").Height("1000px").Bind(MyReport)
+    @Html.DevExpress().WebDocumentViewer("DocumentViewer").Height("1000px").Bind(MyReport)*@
 
 }
