--- a/ReportsProj/Views/ManagementDoc/AttendancePlane_Port_En.cshtml
+++ b/ReportsProj/Views/ManagementDoc/AttendancePlane_Port_En.cshtml
@@ -13,17 +13,17 @@
     ReportsProj.Reports.ManagementDoc.Rep_AttendancePlan_port_En MyReport = new ReportsProj.Reports.ManagementDoc.Rep_AttendancePlan_port_En();
 
     //----- Get Same DataSource Of Grid Form  ----------------
-    List<DailyActivities_AttendancePlanPerEmployee2> MyAll_Ids = _Context.DailyActivities_AttendancePlanPerEmployee2.Where(c => ("," + TempData["P_Id"] + ",").ToString().Contains("," + c.Id.ToString() + ",")).ToList<DailyActivities_AttendancePlanPerEmployee2>();
+    List<DailyActivities_AttendancePlanPerEmployee2> My_rows = _Context.DailyActivities_AttendancePlanPerEmployee2.Where(c => ("," + TempData["P_Id"] + ",").ToString().Contains("," + c.Id.ToString() + ",")).ToList<DailyActivities_AttendancePlanPerEmployee2>();
     List<DailyActivities_AttendancePlanPerEmployee2> MyDataSource = new List<DailyActivities_AttendancePlanPerEmployee2>();
     string[] MyChecker_Ids = TempData["P_Id"].ToString().Split(",");
     for (int counter = 0; counter < MyChecker_Ids.Count(); counter++)
     {
-        foreach (DailyActivities_AttendancePlanPerEmployee2 item in MyAll_Ids)
+        foreach (DailyActivities_AttendancePlanPerEmployee2 item in My_rows)
         {
             if (item.Id.ToString() == MyChecker_Ids[counter])
             {
                 MyDataSource.Add(item);
-                MyAll_Ids.Remove(item);
+                My_rows.Remove(item);
                 break;
             }
         }
