--- a/ReportsProj/Views/ManagementDoc/ApplyToJob_All.cshtml
+++ b/ReportsProj/Views/ManagementDoc/ApplyToJob_All.cshtml
@@ -6,8 +6,8 @@
 
 @using ReportsProj.Management_Models
 @using ReportsProj.DBC
-@*@inject Management_DBC _Context*@
-@inject ApplicationDbContextManagementOnline _Context
+@inject Management_DBC _Context
+@*@inject ApplicationDbContextManagementOnline _Context*@
 
 
 @{
