--- a/ReportsProj/Views/Home/Index.cshtml
+++ b/ReportsProj/Views/Home/Index.cshtml
@@ -46,11 +46,11 @@
 <body>
     <!-- Add the Web Dashboard with the "clientDashboardControl1" name to a View, specify its size, and set the Working Mode to Designer Or Viewer. -->
     <div style="position: absolute; left:0;top:0;right:0;bottom:0;">
-        @(Html.DevExpress().Dashboard("clientDashboardControl1")
+        @*@(Html.DevExpress().Dashboard("clientDashboardControl1")
         .WorkingMode(WorkingMode.Designer)
         .Width("100%")
         .Height("100%")
-        )
+        )*@
     </div>
 </body>
 </html>
