--- a/ReportsProj/Pages/InvalidParam.cshtml
+++ b/ReportsProj/Pages/InvalidParam.cshtml
@@ -2,6 +2,15 @@
 @model ReportsProj.Pages.InvalidParamModel
 @{
 }
-<center></center>
+<center>
+<br />
+<br />
+<br />
+<br />
+<br />
 <img src="~/Images/logo.jpg" />
-<h1>عفواً..الكود غير صحيح</h1>
+<br />
+<br />
+    <h1>عفواً..هذه الفاتورة غير موجود بالنظام</h1>
+    <h3>يرجى التأكد من الكود و رابط الفاتورة المطلوبة</h3>
+</center>
